--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <script src="day.js"></script>
     <script>
-        alert("Hello,world!");
+      let now = new Date();
+      alert(greeting(now));
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
